# django-url-shortener

./: .gitignore  package-lock.json  pyproject.toml
config/: settings.py  urls.py
shortener/: forms.py  models.py  tests.py  urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_shortenedurl_original_url.py
shortener/static/css/: style.css  style.css.map
shortener/styles/scss/: style.scss
shortener/templates/: base.html
shortener/templates/shortener/: detail.html  index.html
shortener/templates/shortener/forms/: url.html
