[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.2",
    "django-debug-toolbar>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
    "ruff>=0.11.13",
]
